--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "postcss": "8.4.24",
+    "psn-api": "^2.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.1",
