--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sharp": "^0.33.2"
+  },
+  "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "clsx": "^1.2.1",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.24",
-    "psn-api": "^2.10.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.32.1",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.33",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
