--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
